--- a/HTML/day 0.html
+++ b/HTML/day 0.html
@@ -12,10 +12,10 @@
     function processData(inputString) {
         // This line of code prints the first line of output
         console.log("Hello, World.");
-        console.log(inputString);
-        
+        console.log(input);
         // Write the second line of output that prints the contents of 'inputString' here.
     }
+    processData(input);
 </script>
 </body>
 </html>
