--- a/ajax_sample/ajax1.html
+++ b/ajax_sample/ajax1.html
@@ -14,7 +14,7 @@ function loadDoc() {
     document.getElementById("demo").innerHTML =
     this.responseText;
   }
-  xhttp.open("GET", "https://jsonplaceholder.typicode.com/todos/1");
+  xhttp.open("GET", "https://jsonplaceholder.typicode.com/todos/1", false);
   xhttp.send();
 }
 </script>
